--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ES6-nodejsinstall",
+  "name": "es6-nodejsinstall",
   "version": "1.0.0",
   "description": "es6  安装nodejs并且配置环境变量 实现es6向es5的转化",
   "main": "index.js",
